update all file in this week

--- a/src/app/account-details/account-details.page.html
+++ b/src/app/account-details/account-details.page.html
@@ -10,27 +10,27 @@
 <ion-content>
   <form [formGroup]="regform">
     <ion-item>
-      <ion-label>Full Name</ion-label>
+      <ion-label position="floating">Full Name</ion-label>
       <ion-input formControlName="FullName" type="text"></ion-input>
       <small class="form-text text-muted" *ngIf="!regform.get('FullName').valid && regform.get('FullName').touched" > This field is required! </small> 
       </ion-item>
     <ion-item>
-      <ion-label>Email  </ion-label>
+      <ion-label position="floating" >Email  </ion-label>
       <ion-input formControlName="email" type="text"></ion-input>
       <small class="form-text text-muted" *ngIf="!regform.get('email').valid && regform.get('email').touched" > This field is required! </small> 
     </ion-item>
     <ion-item>
-      <ion-label>Phone number</ion-label>
+      <ion-label position="floating">Phone number</ion-label>
       <ion-input formControlName="phonenumber" type="text"></ion-input>
       <small class="form-text text-muted" *ngIf="!regform.get('phonenumber').valid && regform.get('phonenumber').touched" > This field is required! </small> 
     </ion-item>
     <ion-item>
-      <ion-label>Password</ion-label>
+      <ion-label position="floating">Password</ion-label>
       <ion-input formControlName="password" type="text"></ion-input>
       <small class="form-text text-muted" *ngIf="!regform.get('password').valid && regform.get('password').touched" > This field is required! </small> 
     </ion-item>
     <div style="text-align: center; margin: auto;">
-      <ion-button id="add items" (click)="SaveAccount()">Save</ion-button>
+      <ion-button id="add items" (click)="SaveAccount()">update Account</ion-button>
     </div>
 </form>
 </ion-content>
