--- a/src/app/menu/menu.page.scss
+++ b/src/app/menu/menu.page.scss
@@ -24,7 +24,7 @@ ion-menu ion-content {
   
   ion-menu.md ion-list#inbox-list {
     border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
-    background-color: rgb(235, 239, 243);
+     background-color: #ebeff300;
   }
   
   ion-menu.md ion-list#inbox-list ion-list-header {
