--- a/src/app/restaurant-history/restaurant-history.page.scss
+++ b/src/app/restaurant-history/restaurant-history.page.scss
@@ -18,3 +18,15 @@ ion-label .message{
   font-style: initial;
   font-family: cursive;
 }
+ion-segment {
+  position: sticky;
+  top: calc(env(safe-area-inset-top) - -0px);
+  z-index: 2;
+  background: #eeeeee;
+  box-shadow: 0px 9px 11px -15px rgba(0, 0, 0, 0);
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 2px;
+}
