--- a/src/app/restaurant-home/restaurant-home.page.scss
+++ b/src/app/restaurant-home/restaurant-home.page.scss
@@ -1,26 +1,38 @@
-ion-row .message{
-    padding-top: 19px;
-    padding-left: 107px;
+ion-row .message {
+  padding-top: 19px;
+  padding-left: 107px;
 }
 ion-button {
-    padding-left: 0px;
+  padding-left: 0px;
 }
 ion-grid .message {
-    border-radius: 9px;
-    background-color: whitesmoke;
-    height: 79px;
+  border-radius: 9px;
+  background-color: whitesmoke;
+  height: 79px;
 }
-ion-label .message{
-    padding-left: 60px;
-    padding-top: 24px;
-    text-align: center;
-    font-size: 28px;
-    font-style: initial;
-    font-family: cursive;
+ion-label .orderMessage {
+  padding-left: 160px;
+  padding-top: 24px;
+  text-align: center;
+  font-size: 28px;
+  font-style: initial;
+  font-family: cursive;
+  margin-left: 86px;
+  margin-top: 26px;
+  font-size: 24px;
+  text-align: center;
 }
 .active-category {
-    --background: var(--ion-color-primary);
-    --color: #fff;
-    --border-radius: 3px;
-    font-weight: 600;
+  --background: var(--ion-color-primary);
+  --color: #fff;
+  --border-radius: 3px;
+  font-weight: 600;
+}
+.location-visible {
+  opacity: 1;
+  transition: 0.5s;
+}
+.location-hidden {
+  opacity: 0;
+  transition: 0.5s;
 }
